# dify-plugin-sdks

./: .editorconfig  .mega-linter.yml  README.md  sitemap.xml
python/: .gitignore  .ruff.toml  README.md  pyproject.toml  setup.py
python/.mkdocs/: mkdocs.yml
python/dify_plugin/: __init__.py  logger_format.py  plugin.py  plugin_executor.py  plugin_registration.py  requirements.txt
python/dify_plugin/config/: config.py  integration_config.py
python/dify_plugin/core/: plugin_executor.py  plugin_registration.py  runtime.py
python/dify_plugin/endpoint/: endpoint.py  entities.py
python/dify_plugin/entities/: __init__.py  agent.py  endpoint.py  oauth.py  provider_config.py  tool.py  workflow_node.py
python/dify_plugin/errors/: model.py  tool.py
python/dify_plugin/file/: constants.py  file.py
python/dify_plugin/integration/: run.py
python/dify_plugin/invocations/: file.py  storage.py  tool.py
python/dify_plugin/model/: ai_model.py  common_openai.py  entities.py  large_language_model.py  model.py  model_entities.py  moderation_model.py  parameter_template.py  provider_entities.py  rerank_model.py  speech2text_model.py  text_embedding_model.py  tts_model.py
python/dify_plugin/protocol/: oauth.py
python/dify_plugin/stream/: input_stream.py  io_stream.py  output_stream.py  stream_reader.py  stream_writer.py
python/dify_plugin/tool/: entities.py  errors.py  tool.py
python/dify_plugin/utils/: class_loader.py  http_parser.py  io_reader.py  io_writer.py  position_helper.py  yaml_loader.py
python/dify_plugin/webhook/: entities.py  webhook.py
python/examples/agent/: README.md  manifest.yaml  (+1 more)
python/scripts/: build_raw_docs.sh  fix.sh  install-deps.sh  launch_mock_server.sh  lint.sh  test.sh
python/tests/: test_llm_result.py  test_prompt_message.py  test_tool_call_model_init.py
(+232 files in other folders)
