[project]
name = "dify_plugin"
version = "0.2.3"
description = "Dify Plugin SDK"
authors = [{ name = "langgenius", email = "hello@dify.ai" }]
dependencies = [
    "Flask~=3.0.3",
    "Werkzeug~=3.0.3",
    "dpkt~=1.9.8",
    "gevent~=24.11.1",
    "httpx~=0.28.1",
    "pydantic_settings>=2.5.0,<3.0.0",
    "pydantic>=2.8.2",
    "pydub~=0.25.1",
    "pyyaml~=6.0.1",
    "requests~=2.32.3",
    "socksio==1.0.0",
    "tiktoken~=0.8.0",
    "yarl>=1.9.4,<2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache2.0" }
keywords = ["dify", "plugin", "sdk"]

[project.urls]
Homepage = "https://github.com/langgenius/dify-plugin-sdks.git"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
lint = ["ruff>=0.11.2"]
test = ["pytest>=8.3.5"]
